@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -22,7 +22,6 @@ import java.util.List;
 import org.orekit.data.DataContext;
 import org.orekit.files.ccsds.ndm.NdmConstituent;
 import org.orekit.files.ccsds.ndm.odm.OdmCommonMetadata;
-import org.orekit.files.ccsds.ndm.odm.KeplerianElements;
 import org.orekit.files.ccsds.ndm.odm.OdmHeader;
 import org.orekit.files.ccsds.section.Segment;
 import org.orekit.orbits.CartesianOrbit;
@@ -66,14 +65,14 @@ public class Opm extends NdmConstituent<OdmHeader, Segment<OdmCommonMetadata, Op
      * @return file metadata
      */
     public OdmCommonMetadata getMetadata() {
-        return getSegments().get(0).getMetadata();
+        return getSegments().getFirst().getMetadata();
     }
 
     /** Get the file data.
      * @return file data
      */
     public OpmData getData() {
-        return getSegments().get(0).getData();
+        return getSegments().getFirst().getData();
     }
 
     /** {@inheritDoc} */
@@ -133,9 +132,8 @@ public class Opm extends NdmConstituent<OdmHeader, Segment<OdmCommonMetadata, Op
     public KeplerianOrbit generateKeplerianOrbit() {
         final OdmCommonMetadata metadata = getMetadata();
         final OpmData        data     = getData();
-        final KeplerianElements keplerianElements = data.getKeplerianElementsBlock();
-        if (keplerianElements != null) {
-            return keplerianElements.generateKeplerianOrbit(metadata.getFrame());
+        if (data.getKeplerianElementsBlock().isPresent()) {
+            return data.getKeplerianElementsBlock().get().generateKeplerianOrbit(metadata.getFrame(), mu);
         } else {
             return new KeplerianOrbit(getPVCoordinates(), metadata.getFrame(),
                                       data.getStateVectorBlock().getEpoch(),
