@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -23,7 +23,6 @@ import java.util.Locale;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.hipparchus.util.FastMath;
 import org.orekit.annotation.DefaultDataContext;
@@ -299,7 +298,7 @@ public class CRD {
 
             if (systemConfigurationId == null) {
                 // default (the first one)
-                return sessionStatisticsData.get(0);
+                return sessionStatisticsData.getFirst();
             }
 
             // Loop to find the appropriate one
@@ -652,7 +651,7 @@ public class CRD {
         @Override
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "10 %s", toString());
+            return String.format(Locale.US, "10 %s", this);
         }
 
         @Override
@@ -833,7 +832,7 @@ public class CRD {
         @Override
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "11 %s", toString());
+            return String.format(Locale.US, "11 %s", this);
         }
 
         @Override
@@ -973,7 +972,7 @@ public class CRD {
          */
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "12 %s", toString());
+            return String.format(Locale.US, "12 %s", this);
         }
 
         @Override
@@ -1097,7 +1096,7 @@ public class CRD {
          */
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "20 %s", toString());
+            return String.format(Locale.US, "20 %s", this);
         }
 
         @Override
@@ -1258,7 +1257,7 @@ public class CRD {
          */
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "30 %s", toString());
+            return String.format(Locale.US, "30 %s", this);
         }
 
         @Override
@@ -1332,8 +1331,8 @@ public class CRD {
                 this.meteo = new ImmutableTimeStampedCache<>(neighborsSize, meteoData);
 
                 // Initialize first and last available dates
-                this.firstDate = meteoData.first().getDate();
-                this.lastDate  = meteoData.last().getDate();
+                this.firstDate = meteoData.getFirst().getDate();
+                this.lastDate  = meteoData.getLast().getDate();
 
             }
 
@@ -1399,8 +1398,8 @@ public class CRD {
                 nextParam     = previousParam;
             } else {
                 // Current date is between first and last date
-                final List<MeteorologicalMeasurement> neighbors = meteo.getNeighbors(date).collect(Collectors.toList());
-                previousParam = neighbors.get(0);
+                final List<MeteorologicalMeasurement> neighbors = meteo.getNeighbors(date).toList();
+                previousParam = neighbors.getFirst();
                 nextParam     = neighbors.get(1);
             }
 
@@ -1752,7 +1751,7 @@ public class CRD {
          */
         @DefaultDataContext
         public String toCrdString() {
-            return String.format(Locale.US, "40 %s", toString());
+            return String.format(Locale.US, "40 %s", this);
         }
 
         @Override
@@ -1769,8 +1768,7 @@ public class CRD {
                                getTime().
                                getSecondsInLocalDay();
 
-            final String str = String.format(
-                    "%18.12f %1d %4s %8s %8s %8.4f %10.1f %8.1f %6.1f %7.3f %7.3f %6.1f %1d %1d %1d %1d %5.1f",
+            final String str = "%18.12f %1d %4s %8s %8s %8.4f %10.1f %8.1f %6.1f %7.3f %7.3f %6.1f %1d %1d %1d %1d %5.1f".formatted(
                     sod, typeOfData, systemConfigurationId,
                     formatIntegerOrNaN(numberOfPointsRecorded, -1),
                     formatIntegerOrNaN(numberOfPointsUsed, -1), oneWayDistance,
@@ -1831,7 +1829,7 @@ public class CRD {
         @DefaultDataContext
         @Override
         public String toCrdString() {
-            return String.format(Locale.US, "41 %s", toString());
+            return String.format(Locale.US, "41 %s", this);
         }
 
     }
@@ -1934,8 +1932,7 @@ public class CRD {
             return peakMinusMean;
         }
 
-        /**
-         * Get the data quality assessment indicator
+        /** Get the data quality assessment indicator.
          * <ul>
          * <li>0=undefined or no comment</li>
          * <li>1=clear, easily filtered data, with little or no noise</li>
@@ -1957,7 +1954,7 @@ public class CRD {
          * @return a string representation of the instance, in the CRD format.
          */
         public String toCrdString() {
-            return String.format(Locale.US, "50 %s", toString());
+            return String.format(Locale.US, "50 %s", this);
         }
 
         @Override
