@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -106,7 +106,7 @@ public class StateCovarianceBlender extends AbstractStateCovarianceInterpolator 
             final Orbit interpolatedOrbit) {
 
         // Necessarily only two sample for blending
-        final TimeStampedPair<Orbit, StateCovariance> previousUncertainState = uncertainStates.get(0);
+        final TimeStampedPair<Orbit, StateCovariance> previousUncertainState = uncertainStates.getFirst();
         final TimeStampedPair<Orbit, StateCovariance> nextUncertainState     = uncertainStates.get(1);
 
         // Get the interpolation date
