@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -16,20 +16,17 @@
  */
 package org.orekit.estimation.sequential;
 
-import java.util.ArrayList;
-import java.util.List;
-
 import org.hipparchus.geometry.euclidean.threed.Vector3D;
 import org.hipparchus.linear.MatrixUtils;
 import org.hipparchus.linear.RealMatrix;
+import org.hipparchus.util.FastMath;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.orekit.attitudes.LofOffset;
 import org.orekit.errors.OrekitException;
 import org.orekit.errors.OrekitMessages;
+import org.orekit.estimation.Context;
 import org.orekit.estimation.EstimationTestUtils;
-import org.orekit.estimation.TLEContext;
-import org.orekit.estimation.TLEEstimationTestUtils;
 import org.orekit.estimation.measurements.ObservedMeasurement;
 import org.orekit.estimation.measurements.PVMeasurementCreator;
 import org.orekit.estimation.measurements.Range;
@@ -39,13 +36,16 @@ import org.orekit.estimation.measurements.modifiers.PhaseCentersRangeModifier;
 import org.orekit.frames.LOFType;
 import org.orekit.gnss.antenna.FrequencyPattern;
 import org.orekit.orbits.Orbit;
-import org.orekit.orbits.PositionAngleType;
 import org.orekit.propagation.Propagator;
 import org.orekit.propagation.analytical.tle.TLEPropagator;
 import org.orekit.propagation.conversion.TLEPropagatorBuilder;
 import org.orekit.time.AbsoluteDate;
 import org.orekit.utils.ParameterDriver;
 import org.orekit.utils.ParameterDriversList;
+
+import java.io.Serial;
+import java.util.ArrayList;
+import java.util.List;
 
 public class TLEKalmanEstimatorTest {
 
@@ -68,19 +68,17 @@ public class TLEKalmanEstimatorTest {
     public void testPV() {
 
         // Create context
-        TLEContext context = TLEEstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        Context context = EstimationTestUtils.contextFromTle("regular-data:potential:tides");
 
         // Create initial orbit and propagator builder
-        final PositionAngleType positionAngleType = PositionAngleType.MEAN;
         final double        dP            = 1.;
-        final TLEPropagatorBuilder propagatorBuilder = context.createBuilder(dP);
+        final TLEPropagatorBuilder propagatorBuilder = context.createTleBuilder(dP);
 
         // Create perfect PV measurements
         final Orbit initialOrbit = TLEPropagator.selectExtrapolator(context.initialTLE).getInitialState().getOrbit();
-        final Propagator propagator = TLEEstimationTestUtils.createPropagator(initialOrbit,
-                                                                           propagatorBuilder);
+        final Propagator propagator = EstimationTestUtils.createPropagator(initialOrbit, propagatorBuilder);
         final List<ObservedMeasurement<?>> measurements =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new PVMeasurementCreator(),
                                                                0.0, 3.0, 300.0);
         // Reference propagator for estimation performances
@@ -88,17 +86,21 @@ public class TLEKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        // Covariance matrix initialization
-        final RealMatrix initialP = MatrixUtils.createRealDiagonalMatrix(new double [] {
+        // Covariance and process noise matrices initialization, expressed in Cartesian formalism
+        final RealMatrix initialCartesianP = MatrixUtils.createRealDiagonalMatrix(new double [] {
             1e-2, 1e-2, 1e-2, 1e-5, 1e-5, 1e-5
         });
-
-        // Process noise matrix
-        RealMatrix Q = MatrixUtils.createRealDiagonalMatrix(new double [] {
+        final RealMatrix initialCartesianQ = MatrixUtils.createRealDiagonalMatrix(new double [] {
             1.e-8, 1.e-8, 1.e-8, 1.e-8, 1.e-8, 1.e-8
         });
+
+        // the filter state vector holds the builder parameters, not the Cartesian coordinates,
+        // so both matrices have to be converted: P(B) = dB/dC P(C) (dB/dC)^T
+        final RealMatrix dBdC = propagatorBuilder.getOrbitalParameterFactory().getJacobianWrtCartesian();
+        final RealMatrix initialP = dBdC.multiply(initialCartesianP.multiply(dBdC.transpose()));
+        final RealMatrix Q = dBdC.multiply(initialCartesianQ.multiply(dBdC.transpose()));
 
 
         // Build the Kalman filter
@@ -109,13 +111,18 @@ public class TLEKalmanEstimatorTest {
 
         // Filter the measurements and check the results
         final double   expectedDeltaPos  = 0.;
-        final double   posEps            = 9.61e-2; // With numerical propagator: 5.80e-8;
+        final double   posEps            = 1.70e-1;
         final double   expectedDeltaVel  = 0.;
-        final double   velEps            = 7.86e-5; // With numerical propagator: 2.28e-11;
-        TLEEstimationTestUtils.checkKalmanFit(context, kalman, measurements,
-                                           refOrbit, positionAngleType,
-                                           expectedDeltaPos, posEps,
-                                           expectedDeltaVel, velEps);
+        final double   velEps            = 8.47e-5;
+        final double[] expectedSigmasPos = {0.179554, 0.130144, 0.416558};
+        final double   sigmaPosEps       = 1e-6;
+        final double[] expectedSigmasVel = {2.469155E-4, 2.548258E-4, 2.165680E-4};
+        final double   sigmaVelEps       = 1e-10;
+        EstimationTestUtils.checkExtendedKalmanFit(false, kalman, measurements,
+                                                   refOrbit, expectedDeltaPos, posEps,
+                                                   expectedDeltaVel, velEps,
+                                                   expectedSigmasPos, sigmaPosEps,
+                                                   expectedSigmasVel, sigmaVelEps);
     }
 
     /**
@@ -126,20 +133,18 @@ public class TLEKalmanEstimatorTest {
     public void testRange() {
 
         // Create context
-        TLEContext context = TLEEstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        Context context = EstimationTestUtils.contextFromTle("regular-data:potential:tides");
 
         // Create initial orbit and propagator builder
-        final PositionAngleType positionAngleType = PositionAngleType.MEAN;
         final double        dP            = 1.;
-        final TLEPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(dP);
+        final TLEPropagatorBuilder propagatorBuilder = context.createTleBuilder(dP);
 
         // Create perfect range measurements
         Orbit initialOrbit = TLEPropagator.selectExtrapolator(context.initialTLE).getInitialState().getOrbit();
-        final Propagator propagator = TLEEstimationTestUtils.createPropagator(initialOrbit,
+        final Propagator propagator = EstimationTestUtils.createPropagator(initialOrbit,
                                                                            propagatorBuilder);
         final List<ObservedMeasurement<?>> measurements =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new TwoWayRangeMeasurementCreator(context),
                                                                1.0, 4.0, 60.0);
 
@@ -148,37 +153,56 @@ public class TLEKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        // Change X position of 10m as in the batch test
-        ParameterDriver xDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().get(0);
-        xDriver.setValue(xDriver.getValue() + 10.0);
-        xDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
+        // FIXME: Bias the start as in the batch test, where the X position was shifted by 10 m.
+        // The builder parameters are TLE mean elements, whose first one is the mean motion,
+        // so the shift is applied as an equivalent semi-major axis change. Differentiating
+        // n = sqrt(mu/a^3) gives dn = -3/2 (n/a) da. This is not the very same perturbation
+        // as a 10 m shift along X, but it is of the same order of magnitude, which is all
+        // this test needs to start away from the solution.
+        final ParameterDriver meanMotionDriver =
+            propagatorBuilder.getOrbitalParameterFactory().getOrbitalParametersDrivers().getDrivers().getFirst();
+        final double meanMotion = meanMotionDriver.getValue();
+        final double semiMajorAxis = FastMath.cbrt(TLEPropagator.getMU() / (meanMotion * meanMotion));
+        final double deltaMeanMotion = -1.5 * meanMotion / semiMajorAxis * 10;
+        meanMotionDriver.setValue(meanMotion + deltaMeanMotion);
+        meanMotionDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
 
-        // Cartesian covariance matrix initialization
+        // Covariance matrix initialization, expressed in Cartesian formalism
         // 100m on position / 1e-2m/s on velocity
         final RealMatrix cartesianP = MatrixUtils.createRealDiagonalMatrix(new double [] {
             100., 100., 100., 1e-2, 1e-2, 1e-2
         });
+
+        // the filter state vector holds the builder parameters, not the Cartesian coordinates,
+        // so the covariance has to be converted: P(B) = dB/dC P(C) (dB/dC)^T
+        final RealMatrix dBdC = propagatorBuilder.getOrbitalParameterFactory().getJacobianWrtCartesian();
+        final RealMatrix initialP = dBdC.multiply(cartesianP.multiply(dBdC.transpose()));
 
         // Process noise matrix is set to 0 here
         RealMatrix Q = MatrixUtils.createRealMatrix(6, 6);
 
         // Build the Kalman filter
         final KalmanEstimator kalman = new KalmanEstimatorBuilder().
-                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(cartesianP, Q)).
+                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(initialP, Q)).
                         estimatedMeasurementsParameters(new ParameterDriversList(), null).
                         build();
 
         // Filter the measurements and check the results
         final double   expectedDeltaPos  = 0.;
-        final double   posEps            = 0.32; // With numerical propagator: 1.77e-4;
+        final double   posEps            = 3.61e-1;
         final double   expectedDeltaVel  = 0.;
-        final double   velEps            = 7.45e-5; // With numerical propagator: 7.93e-8;
-        TLEEstimationTestUtils.checkKalmanFit(context, kalman, measurements,
-                                           refOrbit, positionAngleType,
-                                           expectedDeltaPos, posEps,
-                                           expectedDeltaVel, velEps);
+        final double   velEps            = 8.22e-5;
+        final double[] expectedSigmasPos = {0.741634, 0.282909, 0.564608,};
+        final double   sigmaPosEps       = 1e-6;
+        final double[] expectedSigmasVel = {2.188267E-4, 1.308106E-4, 1.300569E-4};
+        final double   sigmaVelEps       = 1e-10;
+        EstimationTestUtils.checkExtendedKalmanFit(false, kalman, measurements,
+                                                   refOrbit, expectedDeltaPos, posEps,
+                                                   expectedDeltaVel, velEps,
+                                                   expectedSigmasPos, sigmaPosEps,
+                                                   expectedSigmasVel, sigmaVelEps);
     }
 
     /**
@@ -189,14 +213,13 @@ public class TLEKalmanEstimatorTest {
     public void testRangeWithOnBoardAntennaOffset() {
 
         // Create context
-        TLEContext context = TLEEstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        Context context = EstimationTestUtils.contextFromTle("regular-data:potential:tides");
 
         // Create initial orbit and propagator builder
-        final PositionAngleType positionAngleType = PositionAngleType.MEAN;
         final double        dP            = 1.;
-        final TLEPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(dP);
-        propagatorBuilder.setAttitudeProvider(new LofOffset(propagatorBuilder.getFrame(), LOFType.LVLH));
+        final TLEPropagatorBuilder propagatorBuilder = context.createTleBuilder(dP);
+        propagatorBuilder.setAttitudeProvider(new LofOffset(propagatorBuilder.getOrbitalParameterFactory().getFrame(),
+                                                            LOFType.LVLH));
 
         // Antenna phase center definition
         final Vector3D antennaPhaseCenter = new Vector3D(-1.2, 2.3, -0.7);
@@ -206,7 +229,7 @@ public class TLEKalmanEstimatorTest {
         final Propagator propagator = EstimationTestUtils.createPropagator(initialOrbit,
                                                                            propagatorBuilder);
         final List<ObservedMeasurement<?>> measurements =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new TwoWayRangeMeasurementCreator(context,
                                                                                                  Vector3D.ZERO, null,
                                                                                                  antennaPhaseCenter, null,
@@ -226,37 +249,56 @@ public class TLEKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        // Change X position of 10m as in the batch test
-        ParameterDriver xDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().get(0);
-        xDriver.setValue(xDriver.getValue() + 10.0);
-        xDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
+        // FIXME: Bias the start as in the batch test, where the X position was shifted by 10 m.
+        // The builder parameters are TLE mean elements, whose first one is the mean motion,
+        // so the shift is applied as an equivalent semi-major axis change. Differentiating
+        // n = sqrt(mu/a^3) gives dn = -3/2 (n/a) da. This is not the very same perturbation
+        // as a 10 m shift along X, but it is of the same order of magnitude, which is all
+        // this test needs to start away from the solution.
+        final ParameterDriver meanMotionDriver =
+            propagatorBuilder.getOrbitalParameterFactory().getOrbitalParametersDrivers().getDrivers().getFirst();
+        final double meanMotion = meanMotionDriver.getValue();
+        final double semiMajorAxis = FastMath.cbrt(TLEPropagator.getMU() / (meanMotion * meanMotion));
+        final double deltaMeanMotion = -1.5 * meanMotion / semiMajorAxis * 10;
+        meanMotionDriver.setValue(meanMotion + deltaMeanMotion);
+        meanMotionDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
 
-        // Cartesian covariance matrix initialization
+        // Covariance matrix initialization, expressed in Cartesian formalism
         // 100m on position / 1e-2m/s on velocity
         final RealMatrix cartesianP = MatrixUtils.createRealDiagonalMatrix(new double [] {
             100., 100., 100., 1e-2, 1e-2, 1e-2
         });
+
+        // the filter state vector holds the builder parameters, not the Cartesian coordinates,
+        // so the covariance has to be converted: P(B) = dB/dC P(C) (dB/dC)^T
+        final RealMatrix dBdC = propagatorBuilder.getOrbitalParameterFactory().getJacobianWrtCartesian();
+        final RealMatrix initialP = dBdC.multiply(cartesianP.multiply(dBdC.transpose()));
 
         // Process noise matrix is set to 0 here
         RealMatrix Q = MatrixUtils.createRealMatrix(6, 6);
 
         // Build the Kalman filter
         final KalmanEstimator kalman = new KalmanEstimatorBuilder().
-                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(cartesianP, Q)).
+                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(initialP, Q)).
                         estimatedMeasurementsParameters(new ParameterDriversList(), null).
                         build();
 
         // Filter the measurements and check the results
         final double   expectedDeltaPos  = 0.;
-        final double   posEps            = 0.69; // With numerical propagator: 4.57e-3;
+        final double   posEps            = 9.39e-1;
         final double   expectedDeltaVel  = 0.;
-        final double   velEps            = 2.69e-4; // With numerical propagator: 7.29e-6;
-        TLEEstimationTestUtils.checkKalmanFit(context, kalman, measurements,
-                                           refOrbit, positionAngleType,
-                                           expectedDeltaPos, posEps,
-                                           expectedDeltaVel, velEps);
+        final double   velEps            = 3.16e-4;
+        final double[] expectedSigmasPos = {1.250697, 1.197468, 1.543244};
+        final double   sigmaPosEps       = 1e-6;
+        final double[] expectedSigmasVel = {7.114008E-4, 4.470950E-4, 4.333291E-4};
+        final double   sigmaVelEps       = 1e-10;
+        EstimationTestUtils.checkExtendedKalmanFit(false, kalman, measurements,
+                                                   refOrbit, expectedDeltaPos, posEps,
+                                                   expectedDeltaVel, velEps,
+                                                   expectedSigmasPos, sigmaPosEps,
+                                                   expectedSigmasVel, sigmaVelEps);
     }
 
     /**
@@ -266,25 +308,23 @@ public class TLEKalmanEstimatorTest {
     public void testRangeAndRangeRate() {
 
         // Create context
-        TLEContext context = TLEEstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        Context context = EstimationTestUtils.contextFromTle("regular-data:potential:tides");
 
         // Create initial orbit and propagator builder
-        final PositionAngleType positionAngleType = PositionAngleType.MEAN;
         final double        dP            = 1.;
-        final TLEPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(dP);
+        final TLEPropagatorBuilder propagatorBuilder = context.createTleBuilder(dP);
 
         // Create perfect range & range rate measurements
         Orbit initialOrbit = TLEPropagator.selectExtrapolator(context.initialTLE).getInitialState().getOrbit();
-        final Propagator propagator = TLEEstimationTestUtils.createPropagator(initialOrbit,
+        final Propagator propagator = EstimationTestUtils.createPropagator(initialOrbit,
                                                                            propagatorBuilder);
         final List<ObservedMeasurement<?>> measurementsRange =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new TwoWayRangeMeasurementCreator(context),
                                                                1.0, 3.0, 300.0);
 
         final List<ObservedMeasurement<?>> measurementsRangeRate =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new RangeRateMeasurementCreator(context, false, 0.0),
                                                                1.0, 3.0, 300.0);
 
@@ -298,36 +338,55 @@ public class TLEKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        // Change X position of 10m as in the batch test
-        ParameterDriver xDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().get(0);
-        xDriver.setValue(xDriver.getValue() + 10.0);
-        xDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
+        // FIXME: Bias the start as in the batch test, where the X position was shifted by 10 m.
+        // The builder parameters are TLE mean elements, whose first one is the mean motion,
+        // so the shift is applied as an equivalent semi-major axis change. Differentiating
+        // n = sqrt(mu/a^3) gives dn = -3/2 (n/a) da. This is not the very same perturbation
+        // as a 10 m shift along X, but it is of the same order of magnitude, which is all
+        // this test needs to start away from the solution.
+        final ParameterDriver meanMotionDriver =
+            propagatorBuilder.getOrbitalParameterFactory().getOrbitalParametersDrivers().getDrivers().getFirst();
+        final double meanMotion = meanMotionDriver.getValue();
+        final double semiMajorAxis = FastMath.cbrt(TLEPropagator.getMU() / (meanMotion * meanMotion));
+        final double deltaMeanMotion = -1.5 * meanMotion / semiMajorAxis * 10;
+        meanMotionDriver.setValue(meanMotion + deltaMeanMotion);
+        meanMotionDriver.setReferenceDate(AbsoluteDate.GALILEO_EPOCH);
 
-        // Cartesian covariance matrix initialization
+        // Covariance matrix initialization, expressed in Cartesian formalism
         // 100m on position / 1e-2m/s on velocity
         final RealMatrix cartesianP = MatrixUtils.createRealDiagonalMatrix(new double [] {
             100., 100., 100., 1e-2, 1e-2, 1e-2
         });
+
+        // the filter state vector holds the builder parameters, not the Cartesian coordinates,
+        // so the covariance has to be converted: P(B) = dB/dC P(C) (dB/dC)^T
+        final RealMatrix dBdC = propagatorBuilder.getOrbitalParameterFactory().getJacobianWrtCartesian();
+        final RealMatrix initialP = dBdC.multiply(cartesianP.multiply(dBdC.transpose()));
 
         // Process noise matrix is set to 0 here
         RealMatrix Q = MatrixUtils.createRealMatrix(6, 6);
 
         // Build the Kalman filter
         final KalmanEstimator kalman = new KalmanEstimatorBuilder().
-                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(cartesianP, Q)).
+                        addPropagationConfiguration(propagatorBuilder, new ConstantProcessNoise(initialP, Q)).
                         build();
 
         // Filter the measurements and check the results
         final double   expectedDeltaPos  = 0.;
-        final double   posEps            = 0.45; // With numerical propagator: 1.2e-6;
+        final double   posEps            = 0.45;
         final double   expectedDeltaVel  = 0.;
-        final double   velEps            = 1.86e-4; // With numerical propagator: 4.2e-10;
-        TLEEstimationTestUtils.checkKalmanFit(context, kalman, measurements,
-                                           refOrbit, positionAngleType,
-                                           expectedDeltaPos, posEps,
-                                           expectedDeltaVel, velEps);
+        final double   velEps            = 1.86e-4;
+        final double[] expectedSigmasPos = {1.250697, 1.197467, 1.543243};
+        final double   sigmaPosEps       = 1e-6;
+        final double[] expectedSigmasVel = {7.114004E-4, 4.470947E-4, 4.333288E-4};
+        final double   sigmaVelEps       = 1e-10;
+        EstimationTestUtils.checkExtendedKalmanFit(false, kalman, measurements,
+                                                   refOrbit, expectedDeltaPos, posEps,
+                                                   expectedDeltaVel, velEps,
+                                                   expectedSigmasPos, sigmaPosEps,
+                                                   expectedSigmasVel, sigmaVelEps);
     }
 
     /**
@@ -337,20 +396,18 @@ public class TLEKalmanEstimatorTest {
     public void testWrappedException() {
 
         // Create context
-        TLEContext context = TLEEstimationTestUtils.eccentricContext("regular-data:potential:tides");
+        Context context = EstimationTestUtils.contextFromTle("regular-data:potential:tides");
 
         // Create initial orbit and propagator builder
-        final PositionAngleType positionAngleType = PositionAngleType.TRUE;
         final double        dP            = 1.;
-        final TLEPropagatorBuilder propagatorBuilder =
-                        context.createBuilder(dP);
+        final TLEPropagatorBuilder propagatorBuilder = context.createTleBuilder(dP);
 
         // Create perfect range measurements
         Orbit initialOrbit = TLEPropagator.selectExtrapolator(context.initialTLE).getInitialState().getOrbit();
-        final Propagator propagator = TLEEstimationTestUtils.createPropagator(initialOrbit,
+        final Propagator propagator = EstimationTestUtils.createPropagator(initialOrbit,
                                                                            propagatorBuilder);
         final List<ObservedMeasurement<?>> measurements =
-                        TLEEstimationTestUtils.createMeasurements(propagator,
+                        EstimationTestUtils.createMeasurements(propagator,
                                                                new TwoWayRangeMeasurementCreator(context),
                                                                1.0, 3.0, 300.0);
         // Build the Kalman filter
@@ -366,10 +423,8 @@ public class TLEKalmanEstimatorTest {
 
         try {
             // Filter the measurements and expect an exception to occur
-            TLEEstimationTestUtils.checkKalmanFit(context, kalman, measurements,
-                                               initialOrbit, positionAngleType,
-                                               0., 0.,
-                                               0., 0.);
+            EstimationTestUtils.checkExtendedKalmanFit(false, kalman, measurements,
+                                                       initialOrbit, 0., 0., 0., 0., new double[0], 0., new double[0], 0.);
         } catch (DummyException de) {
             // expected
         }
@@ -377,6 +432,7 @@ public class TLEKalmanEstimatorTest {
     }
 
     private static class DummyException extends OrekitException {
+        @Serial
         private static final long serialVersionUID = 1L;
         public DummyException() {
             super(OrekitMessages.INTERNAL_ERROR);
