@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -70,11 +70,11 @@ public class NdmParserTest {
         final DataSource source = new DataSource(name, () -> NdmParserTest.class.getResourceAsStream(name));
         final Ndm ndm = new ParserBuilder().buildNdmParser().parseMessage(source);
         Assertions.assertEquals(1, ndm.getComments().size());
-        Assertions.assertEquals("NDM with only one constituent: an OPM", ndm.getComments().get(0));
+        Assertions.assertEquals("NDM with only one constituent: an OPM", ndm.getComments().getFirst());
         Assertions.assertEquals(1, ndm.getConstituents().size());
-        Opm opm = (Opm) ndm.getConstituents().get(0);
+        Opm opm = (Opm) ndm.getConstituents().getFirst();
         Assertions.assertEquals("OSPREY 5", opm.getMetadata().getObjectName());
-        Assertions.assertEquals(3000.0, opm.getData().getSpacecraftParametersBlock().getMass(), 1.0e-10);
+        Assertions.assertEquals(3000.0, opm.getData().getSpacecraftParametersBlock().orElseThrow().getMass(), 1.0e-10);
     }
 
     @Test
@@ -83,14 +83,14 @@ public class NdmParserTest {
         final DataSource source = new DataSource(name, () -> NdmParserTest.class.getResourceAsStream(name));
         final Ndm ndm = new ParserBuilder().buildNdmParser().parseMessage(source);
         Assertions.assertEquals(1, ndm.getComments().size());
-        Assertions.assertEquals("NDM with two constituents: an OCM and an APM", ndm.getComments().get(0));
+        Assertions.assertEquals("NDM with two constituents: an OCM and an APM", ndm.getComments().getFirst());
         Assertions.assertEquals(2, ndm.getConstituents().size());
-        Ocm ocm = (Ocm) ndm.getConstituents().get(0);
-        Assertions.assertEquals("1998-999A", ocm.getMetadata().getInternationalDesignator());
-        Assertions.assertEquals("WGS-84", ocm.getData().getUserDefinedBlock().getParameters().get("EARTH_MODEL"));
+        Ocm ocm = (Ocm) ndm.getConstituents().getFirst();
+        Assertions.assertEquals("1998-999A", ocm.getMetadata().getInternationalDesignator().orElseThrow());
+        Assertions.assertEquals("WGS-84", ocm.getData().getUserDefinedBlock().orElseThrow().getParameters().get("EARTH_MODEL"));
         Apm apm = (Apm) ndm.getConstituents().get(1);
         Assertions.assertEquals("MARS SPIRIT", apm.getMetadata().getObjectName());
-        Assertions.assertEquals("INSTRUMENT_A", apm.getData().getQuaternionBlock().getEndpoints().getFrameA().getName());
+        Assertions.assertEquals("INSTRUMENT_A", apm.getData().getQuaternionBlock().orElseThrow().getEndpoints().getFrameA().getName());
     }
 
 }
