@@ -1,4 +1,4 @@
-/* Copyright 2022-2025 Romain Serra
+/* Copyright 2022-2026 Romain Serra
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -157,6 +157,6 @@ class TimeIntervalsManeuverTriggerTest {
         assertInstanceOf(FieldBooleanDetector.class, fieldEventDetector);
         final FieldBooleanDetector<Binary64> fieldBooleanDetector = (FieldBooleanDetector<Binary64>) fieldEventDetector;
         assertEquals(1, fieldBooleanDetector.getDetectors().size());
-        assertInstanceOf(FieldTimeIntervalDetector.class, fieldBooleanDetector.getDetectors().get(0));
+        assertInstanceOf(FieldTimeIntervalDetector.class, fieldBooleanDetector.getDetectors().getFirst());
     }
 }
