@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -22,15 +22,15 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.orekit.data.DataContext;
+import org.orekit.data.LazyLoadedDataContext;
 import org.orekit.gnss.metric.messages.rtcm.correction.Rtcm1063;
 import org.orekit.gnss.metric.messages.rtcm.correction.RtcmOrbitCorrectionData;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.RtcmMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 public class Rtcm1063Test {
-
-    private double eps = 1.0e-13;
 
     private EncodedMessage message;
 
@@ -67,7 +67,12 @@ public class Rtcm1063Test {
 
     @Test
     public void testPerfectValue() {
-        final Rtcm1063 rtcm1063 = (Rtcm1063) new RtcmMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+       final LazyLoadedDataContext context = DataContext.getDefault();
+        final Rtcm1063 rtcm1063 = (Rtcm1063) new RtcmMessagesParser(messages,
+                                                                    context.getTimeScales(),
+                                                                    context.getFrames().getEME2000(),
+                                                                    context.getFrames().getITRF(IERSConventions.IERS_2010,
+                                                                                                false)).
                                   parse(message, false);
 
         // Verify size
@@ -75,8 +80,9 @@ public class Rtcm1063Test {
 
         // Verify header
         Assertions.assertEquals(1063,                         rtcm1063.getTypeCode());
-        Assertions.assertEquals(64711.0,                      rtcm1063.getHeader().getEpochTime1s(), eps);
-        Assertions.assertEquals(30.0,                         rtcm1063.getHeader().getSsrUpdateInterval().getUpdateInterval(), eps);
+        final double eps = 1.0e-13;
+        Assertions.assertEquals(64711.0, rtcm1063.getHeader().getEpochTime1s(), eps);
+        Assertions.assertEquals(30.0, rtcm1063.getHeader().getSsrUpdateInterval().getUpdateInterval(), eps);
         Assertions.assertEquals(0,                            rtcm1063.getHeader().getMultipleMessageIndicator());
         Assertions.assertEquals(7,                            rtcm1063.getHeader().getIodSsr());
         Assertions.assertEquals(3951,                         rtcm1063.getHeader().getSsrProviderId());
@@ -84,15 +90,15 @@ public class Rtcm1063Test {
         Assertions.assertEquals(1,                            rtcm1063.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite R01
-        final RtcmOrbitCorrectionData r01 = rtcm1063.getDataMap().get("R01").get(0);
+        final RtcmOrbitCorrectionData r01 = rtcm1063.getDataMap().get("R01").getFirst();
         Assertions.assertEquals(1,                            r01.getSatelliteID());
         Assertions.assertEquals(132,                          r01.getGnssIod());
-        Assertions.assertEquals(18.0095,                      r01.getOrbitCorrection().getDeltaOrbitRadial(),        eps);
-        Assertions.assertEquals(122.8668,                     r01.getOrbitCorrection().getDeltaOrbitAlongTrack(),    eps);
-        Assertions.assertEquals(122.8668,                     r01.getOrbitCorrection().getDeltaOrbitCrossTrack(),    eps);
-        Assertions.assertEquals(0.090047,                     r01.getOrbitCorrection().getDotOrbitDeltaRadial(),     eps);
-        Assertions.assertEquals(0.614332,                     r01.getOrbitCorrection().getDotOrbitDeltaAlongTrack(), eps);
-        Assertions.assertEquals(0.614332,                     r01.getOrbitCorrection().getDotOrbitDeltaCrossTrack(), eps);
+        Assertions.assertEquals(18.0095, r01.getOrbitCorrection().getDeltaOrbitRadial(), eps);
+        Assertions.assertEquals(122.8668, r01.getOrbitCorrection().getDeltaOrbitAlongTrack(), eps);
+        Assertions.assertEquals(122.8668, r01.getOrbitCorrection().getDeltaOrbitCrossTrack(), eps);
+        Assertions.assertEquals(0.090047, r01.getOrbitCorrection().getDotOrbitDeltaRadial(), eps);
+        Assertions.assertEquals(0.614332, r01.getOrbitCorrection().getDotOrbitDeltaAlongTrack(), eps);
+        Assertions.assertEquals(0.614332, r01.getOrbitCorrection().getDotOrbitDeltaCrossTrack(), eps);
     }
 
     private byte[] byteArrayFromBinary(String radix2Value) {
