@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -27,10 +27,9 @@ import org.orekit.gnss.metric.messages.rtcm.correction.RtcmClockCorrectionData;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.RtcmMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 public class Rtcm1064Test {
-
-    private double eps = 1.0e-13;
 
     private EncodedMessage message;
 
@@ -62,7 +61,12 @@ public class Rtcm1064Test {
 
     @Test
     public void testPerfectValue() {
-        final Rtcm1064 rtcm1064 = (Rtcm1064) new RtcmMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+        final DataContext context  = DataContext.getDefault();
+        final Rtcm1064 rtcm1064 = (Rtcm1064) new RtcmMessagesParser(messages,
+                                                                    context.getTimeScales(),
+                                                                    context.getFrames().getEME2000(),
+                                                                    context.getFrames().getITRF(IERSConventions.IERS_2010,
+                                                                                                false)).
                                   parse(message, false);
 
         // Verify size
@@ -70,8 +74,9 @@ public class Rtcm1064Test {
 
         // Verify header
         Assertions.assertEquals(1064,                         rtcm1064.getTypeCode());
-        Assertions.assertEquals(64711.0,                      rtcm1064.getHeader().getEpochTime1s(), eps);
-        Assertions.assertEquals(30.0,                         rtcm1064.getHeader().getSsrUpdateInterval().getUpdateInterval(), eps);
+        final double eps = 1.0e-13;
+        Assertions.assertEquals(64711.0, rtcm1064.getHeader().getEpochTime1s(), eps);
+        Assertions.assertEquals(30.0, rtcm1064.getHeader().getSsrUpdateInterval().getUpdateInterval(), eps);
         Assertions.assertEquals(0,                            rtcm1064.getHeader().getMultipleMessageIndicator());
         Assertions.assertEquals(7,                            rtcm1064.getHeader().getIodSsr());
         Assertions.assertEquals(3951,                         rtcm1064.getHeader().getSsrProviderId());
@@ -79,14 +84,14 @@ public class Rtcm1064Test {
         Assertions.assertEquals(1,                            rtcm1064.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite R01
-        final RtcmClockCorrectionData r01 = rtcm1064.getDataMap().get("R01").get(0);
+        final RtcmClockCorrectionData r01 = rtcm1064.getDataMap().get("R01").getFirst();
         Assertions.assertEquals(1,                            r01.getSatelliteID());
-        Assertions.assertEquals(96.6527,                      r01.getClockCorrection().getDeltaClockC0(),            eps);
-        Assertions.assertEquals(0.483263,                     r01.getClockCorrection().getDeltaClockC1(),            eps);
-        Assertions.assertEquals(0.61857734,                   r01.getClockCorrection().getDeltaClockC2(),            eps);
+        Assertions.assertEquals(96.6527, r01.getClockCorrection().getDeltaClockC0(), eps);
+        Assertions.assertEquals(0.483263, r01.getClockCorrection().getDeltaClockC1(), eps);
+        Assertions.assertEquals(0.61857734, r01.getClockCorrection().getDeltaClockC2(), eps);
     }
 
-    private byte[] byteArrayFromBinary(String radix2Value) {
+    private byte[] byteArrayFromBinary(final String radix2Value) {
         final byte[] array = new byte[radix2Value.length() / 8];
         for (int i = 0; i < array.length; ++i) {
             for (int j = 0; j < 8; ++j) {
