@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -17,8 +17,11 @@
 package org.orekit.gnss.metric.messages.ssr;
 
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.orekit.Utils;
 import org.orekit.data.DataContext;
+import org.orekit.data.LazyLoadedDataContext;
 import org.orekit.errors.OrekitException;
 import org.orekit.errors.OrekitMessages;
 import org.orekit.gnss.SatelliteSystem;
@@ -27,12 +30,18 @@ import org.orekit.gnss.metric.messages.ssr.igm.SsrIgm03Data;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.IgsSsrMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 import java.util.ArrayList;
 
 public class SsrIgm03Test {
 
-    private double eps = 1.0e-13;
+    private final double eps = 1.0e-13;
+
+    @BeforeEach
+    public void setUp() {
+        Utils.setDataRoot("gnss");
+    }
 
     @Test
     public void testPerfectValueGalileo() {
@@ -66,7 +75,11 @@ public class SsrIgm03Test {
         ArrayList<Integer> messages = new ArrayList<>();
         messages.add(63);
 
-        final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+        final LazyLoadedDataContext context = DataContext.getDefault();
+        final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages,
+                                                                   context.getTimeScales(),
+                                                                   context.getFrames().getEME2000(),
+                                                                   context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                                parse(message, false);
 
         // Verify size
@@ -85,7 +98,7 @@ public class SsrIgm03Test {
         Assertions.assertEquals(1,                            igm03.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite E12
-        final SsrIgm03Data e12 = igm03.getSsrIgm03Data().get("E12").get(0);
+        final SsrIgm03Data e12 = igm03.getSsrIgm03Data().get("E12").getFirst();
         Assertions.assertEquals(12,                           e12.getSatelliteID());
         Assertions.assertEquals(132,                          e12.getGnssIod());
         Assertions.assertEquals(18.0095,                      e12.getOrbitCorrection().getDeltaOrbitRadial(),        eps);
@@ -132,7 +145,11 @@ public class SsrIgm03Test {
         ArrayList<Integer> messages = new ArrayList<>();
         messages.add(23);
 
-        final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+        final LazyLoadedDataContext context = DataContext.getDefault();
+        final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages,
+                                                                   context.getTimeScales(),
+                                                                   context.getFrames().getEME2000(),
+                                                                   context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                                parse(message, false);
 
         // Verify size
@@ -151,7 +168,7 @@ public class SsrIgm03Test {
         Assertions.assertEquals(1,                            igm03.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite G01
-        final SsrIgm03Data g01 = igm03.getSsrIgm03Data().get("G01").get(0);
+        final SsrIgm03Data g01 = igm03.getSsrIgm03Data().get("G01").getFirst();
         Assertions.assertEquals(1,                            g01.getSatelliteID());
         Assertions.assertEquals(132,                          g01.getGnssIod());
         Assertions.assertEquals(18.0095,                      g01.getOrbitCorrection().getDeltaOrbitRadial(),         eps);
@@ -198,7 +215,11 @@ public class SsrIgm03Test {
        ArrayList<Integer> messages = new ArrayList<>();
        messages.add(9999999);
 
-       final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+       final LazyLoadedDataContext context = DataContext.getDefault();
+       final SsrIgm03 igm03 = (SsrIgm03) new IgsSsrMessagesParser(messages,
+                                                                  context.getTimeScales(),
+                                                                  context.getFrames().getEME2000(),
+                                                                  context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                               parse(message, false);
 
        Assertions.assertNull(igm03);
@@ -209,7 +230,11 @@ public class SsrIgm03Test {
         try {
             final byte[] array = new byte[0];
             final EncodedMessage emptyMessage = new ByteArrayEncodedMessage(array);
-            new IgsSsrMessagesParser(new ArrayList<>(), DataContext.getDefault().getTimeScales()).
+            final LazyLoadedDataContext context = DataContext.getDefault();
+            new IgsSsrMessagesParser(new ArrayList<>(),
+                                     context.getTimeScales(),
+                                     context.getFrames().getEME2000(),
+                                     context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                 parse(emptyMessage, false);
             Assertions.fail("an exception should have been thrown");
         } catch (OrekitException oe) {
