@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -17,8 +17,11 @@
 package org.orekit.gnss.metric.messages.ssr;
 
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.orekit.Utils;
 import org.orekit.data.DataContext;
+import org.orekit.data.LazyLoadedDataContext;
 import org.orekit.errors.OrekitException;
 import org.orekit.errors.OrekitMessages;
 import org.orekit.gnss.SatelliteSystem;
@@ -27,12 +30,18 @@ import org.orekit.gnss.metric.messages.ssr.igm.SsrIgm04Data;
 import org.orekit.gnss.metric.parser.ByteArrayEncodedMessage;
 import org.orekit.gnss.metric.parser.EncodedMessage;
 import org.orekit.gnss.metric.parser.IgsSsrMessagesParser;
+import org.orekit.utils.IERSConventions;
 
 import java.util.ArrayList;
 
 public class SsrIgm04Test {
 
-    private double eps = 1.0e-13;
+    private final double eps = 1.0e-13;
+
+    @BeforeEach
+    public void setUp() {
+        Utils.setDataRoot("gnss");
+    }
 
     @Test
     public void testPerfectValueQZSS() {
@@ -58,7 +67,11 @@ public class SsrIgm04Test {
         ArrayList<Integer> messages = new ArrayList<>();
         messages.add(84);
 
-        final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+        final LazyLoadedDataContext context = DataContext.getDefault();
+        final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages,
+                                                                   context.getTimeScales(),
+                                                                   context.getFrames().getEME2000(),
+                                                                   context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                                parse(message, false);
 
         // Verify size
@@ -76,12 +89,12 @@ public class SsrIgm04Test {
         Assertions.assertEquals(2,                            igm04.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite J204
-        final SsrIgm04Data j204 = igm04.getSsrIgm04Data().get("J204").get(0);
+        final SsrIgm04Data j204 = igm04.getSsrIgm04Data().get("J204").getFirst();
         Assertions.assertEquals(204,                          j204.getSatelliteID());
         Assertions.assertEquals(96.6526,                      j204.getHighRateClockCorrection(), eps);
 
         // Verify data for satellite J193
-        final SsrIgm04Data j193 = igm04.getSsrIgm04Data().get("J193").get(0);
+        final SsrIgm04Data j193 = igm04.getSsrIgm04Data().get("J193").getFirst();
         Assertions.assertEquals(193,                          j193.getSatelliteID());
         Assertions.assertEquals(96.6527,                      j193.getHighRateClockCorrection(), eps);
 
@@ -111,7 +124,11 @@ public class SsrIgm04Test {
         ArrayList<Integer> messages = new ArrayList<>();
         messages.add(64);
 
-        final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+        final LazyLoadedDataContext context = DataContext.getDefault();
+        final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages,
+                                                                   context.getTimeScales(),
+                                                                   context.getFrames().getEME2000(),
+                                                                   context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                                parse(message, false);
 
         // Verify size
@@ -129,12 +146,12 @@ public class SsrIgm04Test {
         Assertions.assertEquals(2,                            igm04.getHeader().getNumberOfSatellites());
 
         // Verify data for satellite E01
-        final SsrIgm04Data e01 = igm04.getSsrIgm04Data().get("E01").get(0);
+        final SsrIgm04Data e01 = igm04.getSsrIgm04Data().get("E01").getFirst();
         Assertions.assertEquals(1,                            e01.getSatelliteID());
         Assertions.assertEquals(96.6527,                      e01.getHighRateClockCorrection(), eps);
 
         // Verify data for satellite E16
-        final SsrIgm04Data e16 = igm04.getSsrIgm04Data().get("E16").get(0);
+        final SsrIgm04Data e16 = igm04.getSsrIgm04Data().get("E16").getFirst();
         Assertions.assertEquals(16,                           e16.getSatelliteID());
         Assertions.assertEquals(96.6526,                      e16.getHighRateClockCorrection(), eps);
 
@@ -164,7 +181,11 @@ public class SsrIgm04Test {
        ArrayList<Integer> messages = new ArrayList<>();
        messages.add(9999999);
 
-       final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages, DataContext.getDefault().getTimeScales()).
+       final LazyLoadedDataContext context = DataContext.getDefault();
+       final SsrIgm04 igm04 = (SsrIgm04) new IgsSsrMessagesParser(messages,
+                                                                  context.getTimeScales(),
+                                                                  context.getFrames().getEME2000(),
+                                                                  context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                               parse(message, false);
 
        Assertions.assertNull(igm04);
@@ -175,7 +196,11 @@ public class SsrIgm04Test {
         try {
             final byte[] array = new byte[0];
             final EncodedMessage emptyMessage = new ByteArrayEncodedMessage(array);
-            new IgsSsrMessagesParser(new ArrayList<>(), DataContext.getDefault().getTimeScales()).
+            final LazyLoadedDataContext context = DataContext.getDefault();
+            new IgsSsrMessagesParser(new ArrayList<>(),
+                                     context.getTimeScales(),
+                                     context.getFrames().getEME2000(),
+                                     context.getFrames().getITRF(IERSConventions.IERS_2010, false)).
                 parse(emptyMessage, false);
             Assertions.fail("an exception should have been thrown");
         } catch (OrekitException oe) {
