@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -29,6 +29,8 @@ import org.orekit.frames.FramesFactory;
 import org.orekit.orbits.FieldCartesianOrbit;
 import org.orekit.orbits.FieldOrbit;
 import org.orekit.propagation.analytical.FieldEcksteinHechlerPropagator;
+import org.orekit.propagation.events.handlers.ContinueOnEvent;
+import org.orekit.propagation.events.handlers.EventHandler;
 import org.orekit.propagation.events.handlers.FieldContinueOnEvent;
 import org.orekit.time.AbsoluteDate;
 import org.orekit.time.FieldAbsoluteDate;
@@ -40,13 +42,30 @@ import org.orekit.utils.FieldPVCoordinates;
 class FieldParameterDrivenDateIntervalDetectorTest {
 
     @Test
+    void testToEventDetector() {
+        // GIVEN
+        final FieldAbsoluteDate<Binary64> fieldDate = FieldAbsoluteDate.getArbitraryEpoch(Binary64Field.getInstance());
+        final FieldParameterDrivenDateIntervalDetector<Binary64> fieldDetector = new FieldParameterDrivenDateIntervalDetector<>(fieldDate.getField(),
+                "e", fieldDate.toAbsoluteDate(), fieldDate.toAbsoluteDate());
+        final EventHandler handler = new ContinueOnEvent();
+        // WHEN
+        final ParameterDrivenDateIntervalDetector detector = fieldDetector.toEventDetector(handler);
+        // THEN
+        Assertions.assertEquals(handler, detector.getHandler());
+        Assertions.assertEquals(fieldDetector.getStartDriver(), detector.getStartDriver());
+        Assertions.assertEquals(fieldDetector.getStopDriver(), detector.getStopDriver());
+        Assertions.assertEquals(fieldDetector.getDurationDriver(), detector.getDurationDriver());
+        Assertions.assertEquals(fieldDetector.getMedianDriver(), detector.getMedianDriver());
+    }
+
+    @Test
     void testDependsOnlyOnTime() {
         // GIVEN
         final FieldAbsoluteDate<Binary64> fieldDate = FieldAbsoluteDate.getArbitraryEpoch(Binary64Field.getInstance());
         final FieldParameterDrivenDateIntervalDetector<Binary64> detector = new FieldParameterDrivenDateIntervalDetector<>(fieldDate.getField(),
                 "e", fieldDate.toAbsoluteDate(), fieldDate.toAbsoluteDate());
         // WHEN
-        final boolean value = detector.dependsOnTimeOnly();
+        final boolean value = detector.getEventFunction().dependsOnTimeOnly();
         // THEN
         Assertions.assertTrue(value);
     }
@@ -107,7 +126,7 @@ class FieldParameterDrivenDateIntervalDetectorTest {
         propagator.propagate(propagator.getInitialState().getOrbit().getDate().shiftedBy(Constants.JULIAN_DAY));
 
         Assertions.assertEquals(2, logger.getLoggedEvents().size());
-        Assertions.assertEquals(0.0, logger.getLoggedEvents().get(0).getState().getDate().durationFrom(start).getReal(), 1.0e-10);
+        Assertions.assertEquals(0.0, logger.getLoggedEvents().getFirst().getState().getDate().durationFrom(start).getReal(), 1.0e-10);
         Assertions.assertEquals(0.0, logger.getLoggedEvents().get(1).getState().getDate().durationFrom(stop).getReal(), 1.0e-10);
 
     }
@@ -157,7 +176,7 @@ class FieldParameterDrivenDateIntervalDetectorTest {
         propagator.propagate(propagator.getInitialState().getOrbit().getDate().shiftedBy(Constants.JULIAN_DAY));
 
         Assertions.assertEquals(2, logger.getLoggedEvents().size());
-        Assertions.assertEquals(startShift, logger.getLoggedEvents().get(0).getState().getDate().durationFrom(start).getReal(), 1.0e-10);
+        Assertions.assertEquals(startShift, logger.getLoggedEvents().getFirst().getState().getDate().durationFrom(start).getReal(), 1.0e-10);
         Assertions.assertEquals(stopShift,  logger.getLoggedEvents().get(1).getState().getDate().durationFrom(stop).getReal(),  1.0e-10);
 
     }
@@ -211,7 +230,7 @@ class FieldParameterDrivenDateIntervalDetectorTest {
     }
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         Utils.setDataRoot("regular-data");
     }
 
