@@ -1,4 +1,4 @@
-/* Copyright 2002-2025 CS GROUP
+/* Copyright 2002-2026 CS GROUP
  * Licensed to CS GROUP (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -239,10 +239,10 @@ public class DateTimeComponentsTest {
 
                 double deltaInTimeUnit = ns / (double) timeUnit.toNanos(1);
                 Assertions.assertEquals(FastMath.round(deltaInTimeUnit), reference.offsetFrom(minus, timeUnit),
-                    String.format("TimeUnit: %s, ns: %d", timeUnit, ns));
+                        "TimeUnit: %s, ns: %d".formatted(timeUnit, ns));
 
                 Assertions.assertEquals(FastMath.round(-deltaInTimeUnit), reference.offsetFrom(plus, timeUnit),
-                    String.format("TimeUnit: %s, ns: %d", timeUnit, ns));
+                        "TimeUnit: %s, ns: %d".formatted(timeUnit, ns));
             }
 
 
